<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>
    <groupId>org.projectcontrol</groupId>
    <artifactId>projectcontrol-parent</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>projectcontrol-parent</name>
    <packaging>pom</packaging>
    <description>Demo project for Spring Boot</description>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <modules>
        <module>server</module>
        <module>client</module>
        <module>core</module>
        <module>cli</module>
    </modules>
    <properties>
        <java.version>21</java.version>
        <picocli.version>4.7.7</picocli.version>
        <core.version>0.0.1-SNAPSHOT</core.version>
        <client.version>0.0.1-SNAPSHOT</client.version>
        <jacoco-maven-plugin.version>0.8.14</jacoco-maven-plugin.version>
        <sonar-maven-plugin.version>5.5.0.6356</sonar-maven-plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>info.picocli</groupId>
                <artifactId>picocli-spring-boot-starter</artifactId>
                <version>${picocli.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectcontrol</groupId>
                <artifactId>core</artifactId>
                <version>${core.version}</version>
            </dependency>

            <dependency>
                <groupId>org.projectcontrol</groupId>
                <artifactId>client</artifactId>
                <version>${client.version}</version>
            </dependency>

        </dependencies>

    </dependencyManagement>

    <profiles>
        <profile>
            <id>sonar</id>
            <properties>
                <sonar.projectKey>projectcontrol</sonar.projectKey>
                <sonar.projectName>projectcontrol</sonar.projectName>
                <sonar.coverage.jacoco.xmlReportPaths>
                    target/site/jacoco/jacoco.xml
                </sonar.coverage.jacoco.xmlReportPaths>
            </properties>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.jacoco</groupId>
                        <artifactId>jacoco-maven-plugin</artifactId>
                        <version>${jacoco-maven-plugin.version}</version>
                        <executions>
                            <execution>
                                <goals>
                                    <goal>prepare-agent</goal>
                                </goals>
                            </execution>
                            <execution>
                                <id>report</id>
                                <phase>test</phase>
                                <goals>
                                    <goal>report</goal>
                                </goals>
                            </execution>
                            <!-- agrégation multi-modules -->
                            <execution>
                                <id>report-aggregate</id>
                                <phase>verify</phase>
                                <goals>
                                    <goal>report-aggregate</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>

        </profile>
    </profiles>
</project>
